--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#" data-icon="bullets" class="ui-btn-right">Menu</a>
             </div><!-- /header -->
             <div id="slide"> </div>
-            <div class="norm">
+            <div>
 	    		<p><strong>Promociones especiales</strong></p>
                 <p>Descuentos especiales de hasta un 44%</p>
             </div>
