--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="datos"> </div>
 	</body>
     <script>
-		$('#flash').css('height', screen.height);
-		$('#datos').html('Height:'+screen.height+'<br>Width:'+screen.width+'<br><br>Height:'+window.outerHeight+'<br>Width:'+window.outerWidth);
+		$('#flash').css('height', window.outerHeight);
+		//$('#datos').html('Height:'+screen.height+'<br>Width:'+screen.width+'<br><br>Height:'+window.outerHeight+'<br>Width:'+window.outerWidth);
 	</script>
 </html>
