--- a/quienes.html
+++ b/quienes.html
@@ -60,6 +60,7 @@
                 <div class="ui-grid-a">
 					<div class="ui-block-a"><div data-role="button" class="ui-btn" onclick="take_pic();">Take a Picture</div></div>
 					<div class="ui-block-b"><div data-role="button" class="ui-btn" onclick="album_pic();">Select</div></div>
+                    <div class="ui-block-c"><div data-role="button" class="ui-btn" onclick="alert('hola');">hola</div></div>
 				</div>				
       			<img id="cameraImage" src="" />
                 
