--- a/quienes.html
+++ b/quienes.html
@@ -46,6 +46,76 @@
 		</style>
         
         <script type="text/javascript" charset="utf-8">
+		
+		
+		
+		
+var PLAT;
+if (/Android/.exec(navigator.userAgent)) {
+    PLAT = 'android';
+} else if (/(iPad)|(iPhone)|(iPod)/.exec(navigator.userAgent)) {
+    PLAT = 'ios';
+} else if (/(BB10)|(PlayBook)|(BlackBerry)/.exec(navigator.userAgent)) {
+    PLAT = 'blackberry';
+}
+
+var scripts = document.getElementsByTagName('script');
+var currentPath = scripts[scripts.length - 1].src;
+var platformCordovaPath = currentPath.replace("cordova-incl.js", "cordova." + PLAT + ".js");
+var normalCordovaPath = currentPath.replace("cordova-incl.js", "cordova.js");
+var cordovaPath = normalCordovaPath;
+
+if (PLAT) {
+    // XHR to local file is an error on some platforms, windowsphone for one 
+    try {
+        var xhr = new XMLHttpRequest();
+        xhr.open("GET", platformCordovaPath, false);
+        xhr.onreadystatechange = function() {
+
+            if (this.readyState == this.DONE && this.responseText.length > 0) {
+                if(parseInt(this.status) >= 400){
+                    cordovaPath = normalCordovaPath;
+                }else{
+                    cordovaPath = platformCordovaPath;
+                }
+            }
+        };
+        xhr.send(null);
+    }
+    catch(e){
+        cordovaPath = normalCordovaPath;
+    } // access denied!
+}
+
+if (!window._doNotWriteCordovaScript) {
+    document.write('<script type="text/javascript" charset="utf-8" src="' + cordovaPath + '"></script>');
+}
+
+function backHome() {
+	if (window.device && device.platform && device.platform.toLowerCase() == 'android') {
+            navigator.app.backHistory();
+	}
+	else {
+	    window.history.go(-1);
+	}
+}		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 
     var deviceReady = false;
     var platformId = null;
