--- a/quienes.html
+++ b/quienes.html
@@ -4,6 +4,7 @@
     <title>Capture Photo</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova-2.5.0.js"></script>
+    <script src="phonegap.js"></script>
     <script type="text/javascript" charset="utf-8">
 
     var pictureSource;   // picture source
