--- a/quienes.html
+++ b/quienes.html
@@ -3,8 +3,10 @@
   <head>
     <title>Capture Photo</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova-1.9.0.js"></script>
-    <script src="phonegap.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>
+    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+    
     <script type="text/javascript" charset="utf-8">
 
     var pictureSource;   // picture source
