--- a/quienes.html
+++ b/quienes.html
@@ -45,8 +45,8 @@
             
             <div role="main" class="" style="margin-top:20px;">
                 <div class="ui-grid-a">
-					<div class="ui-block-a"><div data-role="button" onclick="take_pic();">Take a Picture</div></div>
-					<div class="ui-block-b"><div data-role="button" onclick="album_pic();">Select</div></div>
+					<div class="ui-block-a"><div data-role="button" onclick="take_pic();" class="ui-btn">Take a Picture</div></div>
+					<div class="ui-block-b"><div data-role="button" onclick="album_pic();" class="ui-btn">Select</div></div>
 				</div>				
       			<img id="cameraImage" src="" />
 			</div>
