--- a/proves-phonegap/index.html
+++ b/proves-phonegap/index.html
@@ -83,6 +83,7 @@
         </div>
         
 		<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+        <script type="text/javascript" charset="utf-8" src="GCMPlugin.js"></script>
         <script type="text/javascript" charset="utf-8">
     
         // Wait for device API libraries to load
