--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
 
 					<!-- panel content goes here -->
 				</div><!-- /panel -->
+	
+				<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+				<script type="text/javascript" src="PushNotification.js"></script>
+                <script type="text/javascript" src="js/push.js"></script>
 
-				
 		</div><!-- /page -->
 	</body>
 </html>
