--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 				<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 				<script type="text/javascript" src="PushNotification.js"></script>
                 <script type="text/javascript" src="js/push.js"></script>
-
+				<script>
+					registerPushwooshAndroid();
+				</script>
 		</div><!-- /page -->
 	</body>
 </html>
