Push no inicial

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div data-role="page" class="ui-responsive-panel">
 
 			<div data-role="header" data-theme="f">
-				<h1>My App</h1>
+				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
 				<a href="#add-form" data-icon="plus" data-iconpos="notext">Add</a>
 			</div><!-- /header -->
@@ -59,8 +59,9 @@
 					border-color: rgba(255, 255, 255, .1);
 				}
             </style>
-
-				<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">
+            
+				<div data-role="panel" data-position="left" data-position-fixed="false" data-display="overlay" id="nav-panel" data-theme="b">
+				<!--<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">-->
 
 					<ul data-role="listview" data-theme="a" data-divider-theme="a" style="margin-top:-16px;" class="nav-search">
 						<li data-icon="delete" style="background-color:#111;">
@@ -96,7 +97,7 @@
         <script type="text/javascript" charset="utf-8" src="js/push.js"></script>
 	
 		<script type="text/javascript">
-            app.initialize();
+            //app.initialize();
         </script>
         
 	</body>
