--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <script type="text/javascript" charset="utf-8" src="js/push.js"></script>
 	
 		<script type="text/javascript">
-            //app.initialize();
+            app.initialize();
         </script>
         
 	</body>
