--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <style type="text/css">
 		 #slider {
-			 background:url(http://www.clinicasguanganmen.es/m/img/slider1.png) top center no-repeat auto 100%;
+			 background:#FFF url(http://www.clinicasguanganmen.es/m/img/slider2.png) top center no-repeat;
 			 height:200px;
 			 clear:both;
 			 margin:0px;
@@ -44,12 +44,9 @@
 			<div data-role="header" data-theme="f">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+                <div id="slider"></div>
 			</div><!-- /header -->
 			<div data-role="content">
-            
-			<div id="slider"></div>
-
-
 
 			<!--- Info del PhoneGap i PUSH -->
                     <div class="app">
