--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<div data-role="header" data-theme="f">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+                <a href="tel:+0034977703703" data-icon="phone" data-iconpos="notext">977 70 37 03</a>
                 <div id="slider"></div>
 			</div><!-- /header -->
 			<div data-role="content">
