--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div data-role="header" data-theme="f">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-                <a href="tel:+0034977703703" data-icon="phone" data-iconpos="notext">977 70 37 03</a>
+                <a href="tel:+34977703703" data-icon="phone" data-iconpos="notext">977 70 37 03</a>
                 <div id="slider"></div>
 			</div><!-- /header -->
 			<div data-role="content">
@@ -81,10 +81,15 @@
 				<!--<div data-role="panel" data-position="left" data-position-fixed="false" data-display="reveal" id="nav-panel" data-theme="a">-->
 
 					<ul data-role="listview" data-theme="a" data-divider-theme="a" style="margin-top:-16px;" class="nav-search">
-						<li data-icon="delete" style="background-color:#111;">
+						<!--
+                        <li data-icon="delete" style="background-color:#111;">
 							<a href="#" data-rel="close">Volver</a>
 						</li>
+                        -->
 						<li>
+							<a href="index.html">Guang An Men</a>
+						</li>
+                        <li>
 							<a href="quienes.html">¿Quienes somos?</a>
 						</li>
                         <li>
