Presenta Dill ultima hora

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                 <p>Las Clínicas Guang An Men cuentan con nueve centros propios cuyo equipo terapeutico está altamente cualificado.</p>
                 
                 <p>Nuestros centros disponen de unas modernas y espaciosas instalaciones, para ayudarles a recuperar su salud y bienestar en un ambiente confortable y armonioso con un trato humano de excelencia.</p>
-
+			
+            <div>
+            	<h3>Visitanos en las redes sociales...</h3>
+            	<p>    </p>
+            </div>
 			<!--- Info del PhoneGap i PUSH -->
                     <div class="app">
                         <h1>PhoneGap</h1>
