--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     	
 		<div data-role="page" class="ui-responsive-panel">
 
-			<div data-role="header" data-theme="b">
+			<div data-role="header" data-position="fixed" data-theme="b">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
                 <a href="tel:+34977703703" data-icon="phone" data-iconpos="notext">977 70 37 03</a>
