--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
             
             	<h2>Bienvenidos a las Clínicas Guang An Men</h2>
                 
-                <p>Las Clínicas Guang An Men, desde 1989, son líderes del sector en España, dedicados exclusivamente a la medicina china de manera integral, combinando la Acupuntura, fitoterapia china, dietética y tuina, porque se ha demostrado durante miles de años que la medicina china es mucho más efectiva que la acupuntura aplicada por sí sola.</p>
-                <p>Las Clínicas Guang An Men cuentan con nueve centros propios cuyo equipo terapeutico está altamente cualificado.</p>
+                <p>Las <strong>Clínicas Guang An Men</strong>, desde 1989, son líderes del sector en España, dedicados exclusivamente a la medicina china de manera integral, combinando la Acupuntura, fitoterapia china, dietética y tuina, porque se ha demostrado durante miles de años que la medicina china es mucho más efectiva que la acupuntura aplicada por sí sola.</p>
+                <p>Las <strong>Clínicas Guang An Men</strong> cuentan con nueve centros propios cuyo equipo terapeutico está altamente cualificado.</p>
                 <p>Nuestros centros disponen de unas modernas y espaciosas instalaciones, para ayudarles a recuperar su salud y bienestar en un ambiente confortable y armonioso con un trato humano de excelencia.</p>
                 <p>Las Clínicas Guang An Men ofrecen el <strong>Servicio de Consulta Informativa Gratuita</strong>, para que los pacientes puedan consultar su caso con nuestros profesionales y se valoren las expectativas antes de tomar la decisión de iniciar el tratamiento.</p>
                 <p>La mayoría de las primeras visitas de la Clínica Guang An Men proceden de recomendaciones de otros pacientes. Esto demuestra el grado de satisfacción de nuestros pacientes gracias a la alta calidad terapéutica y el servicio personalizado recibido.</p>
-                <p>Las Clínicas Guang An Men colaboran estrechamente con instituciones internacionales como la Federación Mundial de Medicina China (WFCMS), Federación Mundial de Acupuntura (WFAS) que a su vez es colaborador de la OMS, Federación Europea de Medicina China (PEFOTS), lo cual nos permite estar al alcance de los nuevos avances terapéuticos y científicos de la medicina china.</p>
-                <p>Las Clínicas Guang An Men están reconocidas y amparadas por la Fundación Europea de MTC, institución dedicada a la difusión, docencia e investigación de la medicina china bajo los criterios de calidad y rigor científico, y cuenta con el apoyo de prestigiosas entidades como las Universidades de Beijing y de Yunnan, Colegio Oficial de Médicos de Tarragona, entre otras.</p>
-                <p>Inmersa en un proyecto de mejora continua, el máximo compromiso de las Clínicas Guang An Men es ofrecer un servicio integral y de calidad a nuestros pacientes. Los más de 20 años de experiencia nos avalan.</p>
+                <p>Las <strong>Clínicas Guang An Men</strong> colaboran estrechamente con instituciones internacionales como la Federación Mundial de Medicina China (WFCMS), Federación Mundial de Acupuntura (WFAS) que a su vez es colaborador de la OMS, Federación Europea de Medicina China (PEFOTS), lo cual nos permite estar al alcance de los nuevos avances terapéuticos y científicos de la medicina china.</p>
+                <p>Las <strong>Clínicas Guang An Men</strong> están reconocidas y amparadas por la Fundación Europea de MTC, institución dedicada a la difusión, docencia e investigación de la medicina china bajo los criterios de calidad y rigor científico, y cuenta con el apoyo de prestigiosas entidades como las Universidades de Beijing y de Yunnan, Colegio Oficial de Médicos de Tarragona, entre otras.</p>
+                <p>Inmersa en un proyecto de mejora continua, el máximo compromiso de las <strong>Clínicas Guang An Men</strong> es ofrecer un servicio integral y de calidad a nuestros pacientes. Los más de 20 años de experiencia nos avalan.</p>
                 <p style="text-align:center"><strong>Bienvenidos a la Clínica Guang An Men y gracias por confiar en nosotros.</strong></p>
 
             <div>
             	<h3>Visitanos en las redes sociales...</h3>
-                <div class="ui-grid-a">
-                	<div class="ui-block-a"><p><i class="fa fa-facebook"></i> Facebook</p></div>
-                    <div class="ui-block-b"><p><i class="fa fa-twitter"></i> Twitter</p></div>
-                    <div class="ui-block-c"><p><i class="fa fa-youtube"></i> Youtube</p></div>
+                <div class="ui-grid-b">
+                	<div class="ui-block-a"><p><a href="https://www.facebook.com/ClinicasGAM"><i class="fa fa-facebook"></i> Facebook</a></p></div>
+                    <div class="ui-block-b"><p><a href="https://twitter.com/@femtc"><i class="fa fa-twitter"></i> Twitter</a></p></div>
+                    <div class="ui-block-c"><p><a href="https://www.youtube.com/user/FEMTC1"><i class="fa fa-youtube"></i> Youtube</a></p></div>
                 </div>
             </div>
 			<!--- Info del PhoneGap i PUSH -->
