--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div>
             	<h3>Visitanos en las redes sociales...</h3>
-                <div class="ui-grid-b">
+                <div class="ui-grid-b social">
                 	<div class="ui-block-a"><p><a href="https://www.facebook.com/ClinicasGAM"><i class="fa fa-facebook"></i> Facebook</a></p></div>
                     <div class="ui-block-b"><p><a href="https://twitter.com/@femtc"><i class="fa fa-twitter"></i> Twitter</a></p></div>
                     <div class="ui-block-c"><p><a href="https://www.youtube.com/user/FEMTC1"><i class="fa fa-youtube"></i> Youtube</a></p></div>
@@ -77,9 +77,8 @@
 			<!-- // Final info PhoneGap i PUSH -->
 			</div><!-- /content -->
 
-			<div class="jqm-footer">
-				<p class="jqm-version"></p>
-				<p>&copy; 2014 HiTech Informàtica</p>
+			<div class="footer">
+				<p>&copy; 2014 Grupo MTC.<br/>Programación y diseño: <a href="//www.hitech-informatica.es" target="_blank">HiTech Informàtica</a></p>
 			</div><!-- /jqm-footer -->
 			
             
