--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             app.initialize();
         </script>
     	
-		<div data-role="page" class="ui-responsive-panel">
+		<div data-role="page" class="ui-responsive-panel" data-theme="b">
 
-			<div data-role="header" data-position="fixed" data-theme="b">
+			<div data-role="header" data-position="fixed">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
                 <a href="tel:+34977703703" data-icon="phone" data-iconpos="notext">977 70 37 03</a>
