--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<a href="visita.html">Solicitar Visita</a>
 						</li>
                         <li>
-							<a href="mapa.html">¿Donde estamos?</a>
+							<a href="senseconnexio.html">¿Donde estamos?</a>
 						</li>
                         <li>
 							<a href="contactar.html">Contactar</a>
