--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -11,7 +11,6 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         
         <link rel="stylesheet" href="css/estils.css" />  <!-- Estils propis -->
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> <!-- FontAwesome -->
         
         <!-- Estils i Javascripts de JQuery -->
             <link rel="stylesheet" href="themes/clinicas.min.css" />
@@ -23,6 +22,7 @@
         <div id="NoConnectSplash"> </div>
         <script>
 			document.getElementById('NoConnectSplash').style.height=window.outerHeight;
+			document.getElementById('NoConnectSplash').innerHTML=window.outerHeight;
 		</script>
 	</body>
 </html>
