--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -22,7 +22,7 @@
         <div id="NoConnectSplash"> </div>
         <script>
 			document.getElementById('NoConnectSplash').style.height=window.outerHeight;
-			document.getElementById('NoConnectSplash').innerHTML=window.outerHeight;
+			//document.getElementById('NoConnectSplash').innerHTML=window.outerHeight;
 		</script>
 	</body>
 </html>
