--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -13,11 +13,7 @@
         <link rel="stylesheet" href="css/estils.css" />  <!-- Estils propis -->
 	</head>
     
-	<body>
-        <div id="NoConnectSplash"> </div>
-        <script>
-			document.getElementById('NoConnectSplash').style.height=window.outerHeight;
-			//document.getElementById('NoConnectSplash').innerHTML=window.outerHeight;
-		</script>
+	<body id="NoConnectSplash">
+    
 	</body>
 </html>
