--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -11,5 +11,5 @@
 	</body>
 </html>
 <script>
-	document.getElementById('NoConnectSplash').style.height=window.outerHeight;
+	document.getElementById('NoConnectSplash').style.height=window.outerHeight+" !important";
 </script>
