--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Clinicas Guang An Men</title>
         <link rel="stylesheet" href="css/estils.css" />  <!-- Estils propis -->
+        <script type="text/javascript" charset="utf-8" src="phonegap.js"></script> <!-- Llibreria PhoneGap -->
+        <script type="text/javascript" charset="utf-8" src="js/push.js"></script> <!-- Funcions PushWoosh -->
 	</head>
     
 	<body>
