--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -14,4 +14,5 @@
 </html>
 <script>
 	document.getElementById('NoConnectSplash').style.height=window.outerHeight+" !important";
+	app.initialize();
 </script>
