--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <link rel="stylesheet" href="themes/clinicas.min.css" />
             <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
             <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile.structure-1.4.2.min.css" />
-            <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+            <script src="js/jquery.min.js"></script>
             <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
         <!--//          -->
 	</head>
