--- a/senseconnexio.html
+++ b/senseconnexio.html
@@ -12,7 +12,7 @@
 	<body style="margin:0px;padding:0px;">
         <div id="NoConnectSplash"><p>&nbsp;</p></div>
         <script type="text/javascript">
-            $("#NoConnectSplash").css("height",document.body.clientHeight);
+            $("#NoConnectSplash").css("height",$(window).height());
             app.initialize();
         </script>
 	</body>
