--- a/quienes.html
+++ b/quienes.html
@@ -88,7 +88,7 @@
 							<a href="visita.html">Solicitar Visita</a>
 						</li>
                         <li>
-							<a href="senseconnexio.html">¿Donde estamos?</a>
+							<a href="donde_estamos.html">¿Donde estamos?</a>
 						</li>
                         <li>
 							<a href="contactar.html">Contactar</a>
