--- a/visita.html
+++ b/visita.html
@@ -90,7 +90,7 @@
 					$(document).ready(function() {
 					  // Bind this action as a function to be executed when the button is clicked...
 					  $('input[type="button"][value="Enviar"]').click(function() {
-						$.post('www.clinicasguanganmen.es/m/visita.php', {
+						$.post('http://www.clinicasguanganmen.es/m/visita.php', {
 					
 						  // These are the names of the form values
 						  // EDIT: You have the wrong ids on these...
