--- a/visita.html
+++ b/visita.html
@@ -80,15 +80,15 @@
                 
                 <div id="citaonline">
                   <div class="ui-grid-b">
-                    <div class="ui-block-a"><button id="bcn"><i class="fa-4x fa-medkit"></i> Barcelona</button></div>
-                    <div class="ui-block-b"><button id="madjj"><i class="fa-4x fa-medkit"></i> Madrid (JJ)</button></div>
-                    <div class="ui-block-c"><button id="madsh"><i class="fa-4x fa-medkit"></i> Madrid (SH)</button></div>
-                    <div class="ui-block-a"><button id="val"><i class="fa-4x fa-medkit"></i> Valencia</button></div>
-                    <div class="ui-block-b"><button id="ali"><i class="fa-4x fa-medkit"></i> Alicante</button></div>
-                    <div class="ui-block-c"><button id="stvi"><i class="fa-4x fa-medkit"></i> St. Vicent Raspeig</button></div>
-                    <div class="ui-block-a"><button id="elda"><i class="fa-4x fa-medkit"></i> Elda</button></div>
-                    <div class="ui-block-b"><button id="amp"><i class="fa-4x fa-medkit"></i> Amposta</button></div>
-                    <div class="ui-block-c"><button id="tgn"><i class="fa-4x fa-medkit"></i> Tarragona</button></div>
+                    <div class="ui-block-a"><button id="bcn"><i class="fa fa-4x fa-medkit"></i><br />Barcelona</button></div>
+                    <div class="ui-block-b"><button id="madjj"><i class="fa fa-4x fa-medkit"></i><br />Madrid (JJ)</button></div>
+                    <div class="ui-block-c"><button id="madsh"><i class="fa fa-4x fa-medkit"></i><br />Madrid (SH)</button></div>
+                    <div class="ui-block-a"><button id="val"><i class="fa fa-4x fa-medkit"></i><br />Valencia</button></div>
+                    <div class="ui-block-b"><button id="ali"><i class="fa fa-4x fa-medkit"></i><br />Alicante</button></div>
+                    <div class="ui-block-c"><button id="stvi"><i class="fa fa-4x fa-medkit"></i><br />St. Vicent Raspeig</button></div>
+                    <div class="ui-block-a"><button id="elda"><i class="fa fa-4x fa-medkit"></i><br />Elda</button></div>
+                    <div class="ui-block-b"><button id="amp"><i class="fa fa-4x fa-medkit"></i><br />Amposta</button></div>
+                    <div class="ui-block-c"><button id="tgn"><i class="fa fa-4x fa-medkit"></i><br />Tarragona</button></div>
                   </div>
                 </div>
                 
