--- a/visita.html
+++ b/visita.html
@@ -26,10 +26,7 @@
         <script type="text/javascript" charset="utf-8" src="phonegap.js"></script> <!-- Llibreria PhoneGap -->
         <script type="text/javascript" charset="utf-8" src="PushNotification.js"></script> <!-- Llibreria plugin Push -->
         <script type="text/javascript" charset="utf-8" src="js/push.js"></script> <!-- Funcions PushWoosh -->
-
-		<div data-role="page" class="ui-responsive-panel" data-theme="b">
-		
-<script type="text/javascript">
+		<script type="text/javascript">
             app.initialize();
 			
 			$(document).ready(function() {
@@ -83,6 +80,8 @@
 				});
         </script>
         
+		<div data-role="page" class="ui-responsive-panel" data-theme="b">
+		
 			<div data-role="header" data-position="fixed">
 				<h1>Clinicas Guang An Men</h1>
 				<a href="#nav-panel" data-icon="bars" class="ui-btn ui-btn-icon-left ui-icon-bars">Menu</a>
@@ -97,7 +96,7 @@
                 <p>Con el fin de prestarle el mejor servicio posible, contactaremos con Ud. lo antes posible para confirmarle la fecha y hora propuestas</p>
                 <p>Gracias por confiar en las <strong>Clinicas Guang An Men</strong>.</p>
 				
-                <div id="visita" style="display:none;">
+                <div id="visita">
                 	<form id="citaprevia" name="citaprevia" >
                     	<input type="text" name="nom" id="nom" value="" >
                         <input type="text" name="apellidos" id="apellidos" value="" >
