--- a/visita.html
+++ b/visita.html
@@ -70,7 +70,7 @@
                 <p>Con el fin de prestarle el mejor servicio posible, contactaremos con Ud. lo antes posible para confirmarle la fecha y hora propuestas</p>
                 <p>Gracias por confiar en las <strong>Clinicas Guang An Men</strong>.</p>
 
-                <div id="visita" style="display:none;">
+                <div id="visita">
                 	<form id="citaprevia" name="citaprevia" >
                     	<input type="text" name="nom" id="nom" value="" >
                         <input type="text" name="apellidos" id="apellidos" value="" >
@@ -78,19 +78,6 @@
                     </form>
                 </div>
                 
-                <div id="citaonline">
-                  <div class="ui-grid-b">
-                    <div class="ui-block-a"><button id="bcn"><i class="fa fa-4x fa-medkit"></i><br />Barcelona</button></div>
-                    <div class="ui-block-b"><button id="madjj"><i class="fa fa-4x fa-medkit"></i><br />Madrid (JJ)</button></div>
-                    <div class="ui-block-c"><button id="madsh"><i class="fa fa-4x fa-medkit"></i><br />Madrid (SH)</button></div>
-                    <div class="ui-block-a"><button id="val"><i class="fa fa-4x fa-medkit"></i><br />Valencia</button></div>
-                    <div class="ui-block-b"><button id="ali"><i class="fa fa-4x fa-medkit"></i><br />Alicante</button></div>
-                    <div class="ui-block-c"><button id="stvi"><i class="fa fa-4x fa-medkit"></i><br />St. Vicent Raspeig</button></div>
-                    <div class="ui-block-a"><button id="elda"><i class="fa fa-4x fa-medkit"></i><br />Elda</button></div>
-                    <div class="ui-block-b"><button id="amp"><i class="fa fa-4x fa-medkit"></i><br />Amposta</button></div>
-                    <div class="ui-block-c"><button id="tgn"><i class="fa fa-4x fa-medkit"></i><br />Tarragona</button></div>
-                  </div>
-                </div>
                 
             	<h3>Visitanos en las redes sociales...</h3>
                 <div class="ui-grid-b social">
