--- a/visita.html
+++ b/visita.html
@@ -26,33 +26,6 @@
         <script type="text/javascript" charset="utf-8" src="phonegap.js"></script> <!-- Llibreria PhoneGap -->
         <script type="text/javascript" charset="utf-8" src="PushNotification.js"></script> <!-- Llibreria plugin Push -->
         <script type="text/javascript" charset="utf-8" src="js/push.js"></script> <!-- Funcions PushWoosh -->
-
-		<script type="text/javascript">
-            app.initialize();
-
-			$(document).ready(function() {
-				  // Bind this action as a function to be executed when the button is clicked...
-				  $('input[type="button"][value="Enviar"]').click(function() {
-					$.post('http://www.clinicasguanganmen.es/m/visita.php', 
-					  $('#citaprevia').serialize() /* Array de valors del formulari */
-					  // HTML function
-					  , function (html) {
-						  // Place the HTML in a astring
-						  var response=html;
-						  // PHP was done and email sent
-						  if (response=="1") {
-							alert("Petición enviada!");
-							//$("#visita").html(XXXXXXXXXXXXXXXXXXXXXXXX);
-						  } else {
-							// Error postback
-							alert("Ha ocurrido un error!");
-							//$("#visita").html(XXXXXXXXXXXXXXXXXXXXXXXX);
-							return false;
-						  }
-					});
-				  });
-				});
-        </script>
     	
 		<div data-role="page" class="ui-responsive-panel" data-theme="b">
 
@@ -127,7 +100,32 @@
 
 					<!-- panel content goes here -->
 				</div><!-- /panel -->
+		<script type="text/javascript">
+            //app.initialize();
 
+			$(document).ready(function() {
+				  // Bind this action as a function to be executed when the button is clicked...
+				  $('input[type="button"][value="Enviar"]').click(function() {
+					$.post('http://www.clinicasguanganmen.es/m/visita.php', 
+					  $('#citaprevia').serialize() /* Array de valors del formulari */
+					  // HTML function
+					  , function (html) {
+						  // Place the HTML in a astring
+						  var response=html;
+						  // PHP was done and email sent
+						  if (response=="1") {
+							alert("Petición enviada!");
+							//$("#visita").html(XXXXXXXXXXXXXXXXXXXXXXXX);
+						  } else {
+							// Error postback
+							alert("Ha ocurrido un error!");
+							//$("#visita").html(XXXXXXXXXXXXXXXXXXXXXXXX);
+							return false;
+						  }
+					});
+				  });
+				});
+        </script>
 		</div><!-- /page -->
 	</body>
 </html>
