--- a/visita.html
+++ b/visita.html
@@ -29,9 +29,9 @@
 							//Preparem el DIV ESPECIALIDADES
 							switch(centro) {
 								case "bcn":
-									$("#especialidades").innerHTML='<div class="ui-block-a"><button id="primvist"><i class="fa fa-4x fa-medkit"></i><br />Primera visita</button></div>'
+									$("#especialidades").html('<div class="ui-block-a"><button id="primvist"><i class="fa fa-4x fa-medkit"></i><br />Primera visita</button></div>'
 																  +'<div class="ui-block-b"><button id="acupu"><i class="fa fa-4x fa-medkit"></i><br />Acupuntura</button></div>'
-																  +'<div class="ui-block-c"><button id="fisiot"><i class="fa fa-4x fa-medkit"></i><br />Fisioterapia</button></div>';
+																  +'<div class="ui-block-c"><button id="fisiot"><i class="fa fa-4x fa-medkit"></i><br />Fisioterapia</button></div>');
 								break;
 								case "madjj":
 									$("#especialidades").innerHTML='';
